# yolodetect

./: .gitignore  CMakeLists.txt  README.md  opencv.cmake  torch.cmake
src/: CMakeLists.txt  main.cpp
src/yolo/: IYoloDetectBase.cpp  IYoloDetectBase.h  boundingbox.h  yolov10detect.cpp  yolov10detect.h  yolov8detect.cpp  yolov8detect.h
